# qr-invitation

./: .gitignore  README.md  pyproject.toml  qrdatabase.db  requirements.txt
src/: main.py
src/utils/: camera.py  database.py  network.py  qrgenerate.py
