[project]
name = "qr-invitation"

version = "0.1.0"

description = "crear qr con datos multiples para generar invitaciones web y gestionar entradas."

readme = "README.md"

requires-python = ">=3.9"

authors = [
    { name = "Axel Josh Dev", email = "tdk.prods.company@gmail.com" }
]

dependencies = [
  "flet==0.28.3",
  "flet-webview==0.1.0",
  "opencv-python",
  "numpy",
  "certifi",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.devjosh".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.devjosh"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "QR Invitation"

# company name to display in about app dialogs
company = "Axel Josh Dev"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Axel Josh"

# íconos y splash
icon = "src/assets/icon.png"

[tool.flet.splash]
image = "src/assets/splash_android.png"
color = "#FFFFFF"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}